🐥🚦 Checkpoint ./index.js:62590089/583 ./generator/index.html:62590089/9

--- a/generator/index.html
+++ b/generator/index.html
@@ -10,7 +10,7 @@
   <body>
     <script src="sketch.js"></script>
      <!-- Button to fetch and display a random description -->
-    <button id="fetchDescriptionButton">+Description</button>
+<!--     <button id="fetchDescriptionButton">+Description</button> -->
 
      <!-- Display area for the fetched description -->
     <div id="descriptionContainer"></div>
