🚓🎾 Checkpoint ./generator/sketch.js:62590089/48 ./gallery/index.html:62741461/1978 ./gallery/css.style:62741461/1078 ./generator/index.html:62590089/269 ./generator/style.css:62590089/378 ./index.js:62590089/66

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Art Gallery</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Art Gallery</h1>
+    
+    <div class="gallery">
+        <div class="artwork">
+            <img src="artwork1.jpg" alt="Artwork 1">
+            <div class="description">
+                <h2>Artwork Title 1</h2>
+                <p>Description of Artwork 1.</p>
+            </div>
+        </div>
 
+        <div class="artwork">
+            <img src="artwork2.jpg" alt="Artwork 2">
+            <div class="description">
+                <h2>Artwork Title 2</h2>
+                <p>Description of Artwork 2.</p>
+            </div>
+        </div>
+
+        <!-- Add more artworks and descriptions as needed -->
+    </div>
+</body>
+</html>
