🎃🚥 Checkpoint ./index.js:274672/4:62590089/3 ./generator/sketch.js:274672/343:62590089/688 ./generator/gallery/index.html:62741461/517

--- a/generator/gallery/index.html
+++ b/generator/gallery/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Art Gallery</h1>
+    <h1>VCJ Art Gallery</h1>
     
     <div class="gallery">
         <div class="artwork">
@@ -25,7 +25,22 @@
                 <p>Description of Artwork 2.</p>
             </div>
         </div>
+      
+        <div class="artwork">
+            <img src="artwork3.jpg" alt="Artwork 3">
+            <div class="description">
+                <h2>Artwork Title 3</h2>
+                <p>Description of Artwork 3.</p>
+            </div>
+        </div>
 
+        <div class="artwork">
+            <img src="artwork4.jpg" alt="Artwork 4">
+            <div class="description">
+                <h2>Artwork Title 4</h2>
+                <p>Description of Artwork 4.</p>
+            </div>
+        </div>
         <!-- Add more artworks and descriptions as needed -->
     </div>
 </body>
