🍁☺️ Checkpoint ./index.js:62590089/40 ./generator/gallery/index.html:274672/51 ./generator/gallery/app.js:274672/421

--- a/generator/gallery/index.html
+++ b/generator/gallery/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>VCJ Art Gallery</h1>
     
-    <div class="gallery">
-        <div class="artwork">
+    <div id="gallery">
+<!--         <div class="artwork">
             <img src="artwork1.jpg" alt="Artwork 1">
             <div class="description">
                 <h2>Artwork Title 1</h2>
@@ -40,8 +40,9 @@
                 <h2>Artwork Title 4</h2>
                 <p>Description of Artwork 4.</p>
             </div>
-        </div>
+        </div> -->
         <!-- Add more artworks and descriptions as needed -->
     </div>
+  <script src="./app.js"></script>
 </body>
 </html>
