--- a/generator/gallery/index.html
+++ b/generator/gallery/index.html
@@ -10,7 +10,7 @@
     <h1>VCJ Art Gallery</h1>
     
     <div id="gallery">
-<!--         <div class="artwork">
+        <div class="artwork">
             <img src="artwork1.jpg" alt="Artwork 1">
             <div class="description">
                 <h2>Artwork Title 1</h2>
@@ -40,7 +40,7 @@
                 <h2>Artwork Title 4</h2>
                 <p>Description of Artwork 4.</p>
             </div>
-        </div> -->
+        </div>
         <!-- Add more artworks and descriptions as needed -->
     </div>
   <script src="./app.js"></script>
