--- a/generator/gallery/index.html
+++ b/generator/gallery/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button>
+  </button>
     <h1>VCJ Art Gallery</h1>
     
     <div id="gallery">
