🦂🏈 Checkpoint ./generator/gallery/index.html:62590089/139 ./generator/gallery/app.js:62590089/502 ./generator/gallery/style.css:62590089/93 ./generator/style.css:62590089/14

--- a/generator/gallery/index.html
+++ b/generator/gallery/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button>
-  </button>
+    <button id="generator"> Generate more </button>
     <h1>VCJ Art Gallery</h1>
     
     <div id="gallery">
