--- a/generator/gallery/index.html
+++ b/generator/gallery/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <button id="generator"> Generate more </button>
+    <button id="goback"> Go back to main page </button>
     <h1>VCJ Art Gallery</h1>
-    
+
     <div id="gallery">
         <!-- Add more artworks and descriptions as needed -->
     </div>
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
